test/tasty/pos/src-2/tastytest/TestDelayedParameterised.scala
package tastytest

object TestDelayedParameterised {
  def test: DelayedParameterised[Nothing, Nothing] = ??? // error
}
